--- a/index.htm
+++ b/index.htm
@@ -399,24 +399,24 @@
                 const isHigh = diffVal > 0;
                 return (
                     <div className="flex items-center justify-between py-2 border-b border-gray-800 last:border-0">
-                        <div className="w-8 text-xs text-gray-400 font-medium">{label}</div>
+                        <div className="w-10 text-sm text-gray-400 font-medium">{label}</div>
                         
                         <div className="flex-1 px-1">
                             <div className="flex justify-between items-end mb-1">
                                 <span className="text-xs text-gray-500">Avg: {data.avg}</span>
-                                <span className="text-sm font-bold text-white">{data.current}</span>
+                                <span className="text-base font-bold text-white">{data.current}</span>
                             </div>
-                            <div className="flex justify-between items-center text-[10px]">
+                            <div className="flex justify-between items-center text-xs">
                                 <span className={`${isHigh ? 'text-red-400' : 'text-emerald-400'} flex items-center`}>
                                     {isHigh ? '+' : ''}{data.diff} 
-                                    {isHigh ? <span className="text-[8px] ml-0.5">▲</span> : <span className="text-[8px] ml-0.5">▼</span>}
+                                    {isHigh ? <span className="text-[10px] ml-0.5">▲</span> : <span className="text-[10px] ml-0.5">▼</span>}
                                 </span>
-                                <span className={`font-mono ${parseInt(data.ratio) > 150 ? 'text-red-500 font-bold' : 'text-gray-400'}`}>
+                                <span className={`font-mono text-sm ${parseInt(data.ratio) > 150 ? 'text-red-500 font-bold' : 'text-gray-400'}`}>
                                     {data.ratio}%
                                 </span>
                             </div>
                             {/* Visual Bar */}
-                            <div className="w-full bg-gray-800 h-1 mt-1 rounded overflow-hidden">
+                            <div className="w-full bg-gray-800 h-1.5 mt-1.5 rounded overflow-hidden">
                                 <div className={`h-full ${isHigh ? 'bg-red-500' : 'bg-emerald-500'}`} style={{width: `${Math.min(parseInt(data.ratio)/2, 100)}%`}}></div>
                             </div>
                         </div>
@@ -429,14 +429,14 @@
                 return (
                     <div className="py-2 border-b border-gray-800 last:border-0">
                         <div className="flex justify-between items-center mb-1">
-                            <span className="text-xs text-sky-400 font-bold w-8">{label}</span>
-                            <span className="text-xs text-white font-mono bg-gray-800 px-1.5 rounded">{data.current}</span>
+                            <span className="text-sm text-sky-400 font-bold w-10">{label}</span>
+                            <span className="text-sm text-white font-mono bg-gray-800 px-1.5 rounded">{data.current}</span>
                         </div>
                         <div className="grid grid-cols-4 gap-1 text-center">
                             {data.history.map((val, idx) => (
                                 <div key={idx} className="flex flex-col items-center bg-gray-900/50 rounded py-1">
-                                    <span className="text-[9px] text-gray-500">-{idx+1}W</span>
-                                    <span className={`text-[10px] font-mono ${val > data.current ? 'text-emerald-400' : (val < data.current ? 'text-red-400' : 'text-gray-300')}`}>
+                                    <span className="text-[10px] text-gray-500">-{idx+1}W</span>
+                                    <span className={`text-xs font-mono ${val > data.current ? 'text-emerald-400' : (val < data.current ? 'text-red-400' : 'text-gray-300')}`}>
                                         {val}
                                     </span>
                                 </div>
@@ -570,7 +570,7 @@
                             <div className="grid grid-cols-1 md:grid-cols-2 gap-4">
                                 {/* Left Column: Velocity & Ratio (Current vs Avg) */}
                                 <div className="mobile-card px-4 py-2">
-                                    <h3 className="text-xs text-gray-500 uppercase mt-2 mb-1 flex items-center">
+                                    <h3 className="text-sm text-gray-500 uppercase mt-2 mb-1 flex items-center">
                                         <Trending className="w-3 h-3 mr-1" />
                                         速率強度 (Velocity Ratio)
                                     </h3>
@@ -587,7 +587,7 @@
                                 {/* Right Column: Deep History Comparison (-1W to -4W) */}
                                 <div className="mobile-card px-4 py-2 overflow-x-auto hide-scroll">
                                     <div className="min-w-[280px]">
-                                        <h3 className="text-xs text-sky-500 uppercase mt-2 mb-1 flex items-center justify-between">
+                                        <h3 className="text-sm text-sky-500 uppercase mt-2 mb-1 flex items-center justify-between">
                                             <div className="flex items-center"><History className="w-3 h-3 mr-1" /> 歷史回推比較 (4 Weeks)</div>
                                             <div className="text-[9px] text-gray-600">Now vs History</div>
                                         </h3>
