--- a/index.htm
+++ b/index.htm
@@ -403,7 +403,7 @@
                         
                         <div className="flex-1 px-1">
                             <div className="flex justify-between items-end mb-1">
-                                <span className="text-xs text-gray-500">Avg: {data.avg}</span>
+                                <span className="text-xs text-gray-500">平均: {data.avg}</span>
                                 <span className="text-base font-bold text-white">{data.current}</span>
                             </div>
                             <div className="flex justify-between items-center text-xs">
