--- a/index.htm
+++ b/index.htm
@@ -1313,17 +1313,13 @@
                 return t;
             };
 
-            const formatTime = (date) => date.toLocaleTimeString('en-US', { timeZone: 'America/New_York', hour12: false, hour: '2-digit', minute:'2-digit' });
-            const formatDay = (date) => ['週日','週一','週二','週三','週四','週五','週六'][date.getDay()];
-            const formatTimeRange = (startTs, h) => {
-                if (!startTs) return "N/A";
-                const startDate = new Date(startTs);
-                const endDate = new Date(startTs + h * 3600000);
-                const dateStr = startDate.toLocaleDateString('zh-TW', {month:'numeric', day:'numeric', timeZone: 'America/New_York'});
-                const startStr = startDate.toLocaleTimeString('en-US', {timeZone: 'America/New_York', hour12:false, hour:'2-digit', minute:'2-digit'});
-                const endStr = endDate.toLocaleTimeString('en-US', {timeZone: 'America/New_York', hour12:false, hour:'2-digit', minute:'2-digit'});
-                return `${dateStr} ${startStr} ~ ${endStr} (${h}H)`;
-            };
+            const formatTimeET = (date) => date.toLocaleTimeString('en-US', { timeZone: 'America/New_York', hour12: false, hour: '2-digit', minute:'2-digit' });
+            const formatDateET = (date) => date.toLocaleDateString('en-US', { timeZone: 'America/New_York', month: 'numeric', day: 'numeric' });
+            const formatWeekdayET = (date) => date.toLocaleDateString('zh-TW', { timeZone: 'America/New_York', weekday: 'short' });
+            
+            // Keeps for existing uses if any, but override for header
+            const formatTime = (date) => formatTimeET(date);
+            const formatDay = (date) => formatWeekdayET(date);
 
             let hoursSinceLast = 0;
             const lastPost = posts.length > 0 ? posts[0] : null;
@@ -1520,9 +1516,10 @@
                         </div>
                         <div className="flex flex-col items-end">
                             <div className="flex items-baseline space-x-1">
-                                <span className="text-2xl font-mono font-bold text-emerald-400 leading-none">{formatTime(currentTime)}</span>
+                                <span className="text-sm text-emerald-500 font-bold mr-1">{formatDateET(currentTime)}</span>
+                                <span className="text-2xl font-mono font-bold text-emerald-400 leading-none">{formatTimeET(currentTime)}</span>
                                 <span className="text-xs text-emerald-600 font-bold">ET</span>
-                                <span className="text-xs text-gray-400">({formatDay(currentTime)})</span>
+                                <span className="text-xs text-gray-400">({formatWeekdayET(currentTime)})</span>
                             </div>
                             <div className="flex items-center text-[10px] text-sky-400 mt-1 bg-sky-900/20 px-1 rounded">
                                 <Target className="w-3 h-3 mr-1" />
@@ -1748,14 +1745,40 @@
                                     {posts.slice(0, 10).map((post) => (
                                         <div key={post.id} className="border-b border-gray-800 pb-2 last:border-0">
                                             <div className="flex justify-between items-start mb-1">
-                                                <span className="text-[10px] text-sky-500 font-mono">{new Date(post.createdAt).toLocaleTimeString([], {month:'numeric', day:'numeric', hour: '2-digit', minute:'2-digit'})}</span>
+                                                <span className="text-[10px] text-sky-500 font-mono">
+                                                    {new Date(post.createdAt).toLocaleString('en-US', {
+                                                        timeZone: 'America/New_York',
+                                                        month: 'numeric', 
+                                                        day: 'numeric', 
+                                                        hour: '2-digit', 
+                                                        minute: '2-digit',
+                                                        hour12: false
+                                                    })} ET
+                                                </span>
                                             </div>
                                             <p className="text-gray-300 text-xs leading-relaxed">{simpleTranslate(post.content) || <span className="italic text-gray-600">(純圖片/轉發)</span>}</p>
                                         </div>
                                     ))}
                                 </div>
                             </div>
-                            <div className="text-center text-[10px] text-gray-600 pt-4 pb-8">資料來源: {dataSource} | 總數: {posts.length} 筆 | 更新: {lastUpdated?.toLocaleTimeString()}</div>
+                            <div className="text-center text-[10px] text-gray-600 pt-4 pb-8 flex flex-col items-center">
+                                <div>資料來源: {dataSource} | 總數: {posts.length} 筆</div>
+                                <div className="mt-1">
+                                    <span className="mr-2">系統更新: {lastUpdated?.toLocaleTimeString()}</span>
+                                    {posts.length > 0 && (
+                                        <span className="text-sky-600">
+                                            最新發文: {new Date(posts[0].createdAt).toLocaleTimeString('en-US', {
+                                                timeZone: 'America/New_York',
+                                                month: 'numeric', 
+                                                day: 'numeric', 
+                                                hour: '2-digit', 
+                                                minute: '2-digit',
+                                                hour12: false
+                                            })} ET
+                                        </span>
+                                    )}
+                                </div>
+                            </div>
                         </div>
                     ) : (
                         <div className="flex flex-col items-center justify-center h-[60vh] text-gray-500 px-6 text-center relative">
@@ -1781,7 +1804,7 @@
                                     <h3 className="text-lg font-bold text-red-400 mb-2">系統連線異常</h3>
                                     <p className="text-sm mb-4 text-gray-400 max-w-[250px] mx-auto">{errorMsg}</p>
                                     <button 
-                                        onClick={fetchFromApi} 
+                                        onClick={() => fetchFromApi(0)} 
                                         className="bg-red-900/30 text-red-400 border border-red-800 px-6 py-2 rounded-full text-sm font-medium hover:bg-red-900/50 transition"
                                     >
                                         重試連線
