--- a/index.htm
+++ b/index.htm
@@ -207,6 +207,7 @@
         const Calendar = (props) => <IconBase {...props} path={<g><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></g>} />;
         const PieChart = (props) => <IconBase {...props} path={<g><path d="M21.21 15.89A10 10 0 1 1 8 2.83" /><path d="M22 12A10 10 0 0 0 12 2v10z" /></g>} />;
         const Send = (props) => <IconBase {...props} path={<g><line x1="22" y1="2" x2="11" y2="13"></line><polygon points="22 2 15 22 11 13 2 9 22 2"></polygon></g>} />;
+        const Bell = (props) => <IconBase {...props} path={<g><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path><path d="M13.73 21a2 2 0 0 1-3.46 0"></path></g>} />;
 
         // --- Helper Functions (Moved outside App) ---
         const formatTimeET = (date) => date.toLocaleTimeString('en-US', { timeZone: 'America/New_York', hour12: false, hour: '2-digit', minute:'2-digit' });
@@ -1088,6 +1089,7 @@
                 predictionAvg: 0,
                 predictionConf: 0,
                 velocity12H: 0,
+                velocity24h: 0, // NEW: For notification
                 projectedCurrent: 0,
                 projected7Day: 0,
                 heatmapMin: 0,
@@ -1100,6 +1102,38 @@
             useEffect(() => {
                 localStorage.setItem('elon_tactical_webhook', webhookUrl);
             }, [webhookUrl]);
+
+            // Audio & Notification Logic
+            const playAlarm = useCallback(() => {
+                try {
+                    const audio = new Audio('Alarm02.wav');
+                    audio.play().catch(() => { 
+                        // Ignore auto-play policy errors or file not found
+                    });
+                } catch (e) {
+                    // Ignore construction errors
+                }
+            }, []);
+
+            const requestNotificationPermission = useCallback(() => {
+                if (!("Notification" in window)) return;
+                if (Notification.permission !== "granted") {
+                    Notification.requestPermission();
+                }
+            }, []);
+
+            const sendSystemNotification = useCallback((currentCount, rate24h) => {
+                if (!("Notification" in window)) return;
+                if (Notification.permission === "granted") {
+                    try {
+                        const title = "Elon Mobile Tactical";
+                        const body = `發文數更新:目前發文數 ${currentCount}, 目前1天平均速率為: ${rate24h}`;
+                        new Notification(title, { body, icon: 'https://abs.twimg.com/sticky/default_profile_images/default_profile_400x400.png' });
+                    } catch (e) {
+                        console.error("Notification error", e);
+                    }
+                }
+            }, []);
 
             // Webhook sender function
             const sendWebhook = async (message) => {
@@ -1405,6 +1439,12 @@
                                 setIsNewPost(true);
                                 setTimeout(() => setIsNewPost(false), 2000); 
                                 addLog("New post detected! Refreshing...");
+                                
+                                // Trigger Alarm & Notification
+                                playAlarm();
+                                const currentRate = statsRef.velocity24h || "0.00";
+                                sendSystemNotification(newCount, currentRate + "/h");
+
                                 const s = statsRef; 
                                 const msg = `發文數更新:${newCount}預測${s.predictionAvg}&${s.predictionConf}    速率:${s.velocity12H}&${s.projectedCurrent}&${s.projected7Day}總預估值${s.heatmapMin},${s.heatmapAvg},${s.heatmapMax}區間機率預測:${s.rangeProbs}`;
                                 sendWebhook(msg);
@@ -1421,7 +1461,7 @@
                     setLoadingSpecial(false); 
                     isFetchingSpecialRef.current = false; 
                 }
-            }, [fetchFromApi, webhookUrl, statsRef]); 
+            }, [fetchFromApi, webhookUrl, statsRef, playAlarm, sendSystemNotification]); 
 
             useEffect(() => {
                 addLog("System Init...");
@@ -1699,6 +1739,15 @@
                 return res;
             }, [historicalStats, realTimeComparison]);
 
+            // NEW: Update statsRef with 24h velocity for notification
+            useEffect(() => {
+                if (velocityStats && velocityStats[24]) {
+                    const v24 = velocityStats[24];
+                    const rate = (v24.current / 24).toFixed(2);
+                    setStatsRef(prev => ({ ...prev, velocity24h: rate }));
+                }
+            }, [velocityStats]);
+
             const lastLongSilence = useMemo(() => {
                 if (posts.length < 2) return null;
                 const now = new Date();
@@ -1822,9 +1871,22 @@
                                     <span>⚠️ {errorMsg || "連線需注意"}</span>
                                     <button onClick={() => setShowControls(false)} className="text-gray-500">隱藏</button>
                                 </div>
-                                <button onClick={fetchFromApi} disabled={loading} className="w-full bg-sky-900/30 text-sky-400 border border-sky-800 py-3 rounded text-sm font-medium flex justify-center items-center mb-2">
-                                    {loading ? <RefreshCw className="w-4 h-4 animate-spin mr-2" /> : "重試連線"}
-                                </button>
+                                <div className="flex gap-2">
+                                     <button onClick={fetchFromApi} disabled={loading} className="w-full bg-sky-900/30 text-sky-400 border border-sky-800 py-3 rounded text-sm font-medium flex justify-center items-center mb-2">
+                                        {loading ? <RefreshCw className="w-4 h-4 animate-spin mr-2" /> : "重試連線"}
+                                    </button>
+                                    <button 
+                                        onClick={() => {
+                                            requestNotificationPermission();
+                                            playAlarm();
+                                            sendSystemNotification(specialCount || 0, (statsRef.velocity24h || "0.0") + "/h");
+                                        }} 
+                                        className="w-full bg-emerald-900/30 text-emerald-400 border border-emerald-800 py-3 rounded text-sm font-medium flex justify-center items-center mb-2"
+                                    >
+                                        <Bell className="w-4 h-4 mr-2" />
+                                        測試通知 (Test)
+                                    </button>
+                                </div>
                                 
                                 <div className="border-t border-gray-800 pt-2 mb-2">
                                     <label className="block text-[10px] text-gray-500 mb-1 flex items-center">
