--- a/index.htm
+++ b/index.htm
@@ -1634,7 +1634,7 @@
                 const startStr = config.startDate || "2025-12-30";
                 const endStr = config.endDate || "2026-01-06";
                 const targetUrl = `https://xtracker.polymarket.com/api/users/elonmusk/posts?startDate=${startStr}T17:00:00.000Z&endDate=${endStr}T17:00:59.000Z`;
-                const proxyUrl = `https://corsproxy.io/?${encodeURIComponent(targetUrl)}&_t=${Date.now()}`;
+                const proxyUrl = `https://corsproxy.io/?key=6d848867&url=${encodeURIComponent(targetUrl)}&_t=${Date.now()}`;
                 
                 try {
                     const response = await fetch(proxyUrl, {
