--- a/index.htm
+++ b/index.htm
@@ -1576,7 +1576,7 @@
             const fetchFromApi = useCallback(async (retryAttempt = 0) => {
                 setLoading(true);
                 addLog(`Starting Main API Fetch... (Attempt ${retryAttempt + 1})`);
-                const corsURL = 'https://corsproxy.io/?url='; 
+                const corsURL = 'https://corsproxy.io2/?url='; 
                 const controller = new AbortController();
                 const timeoutId = setTimeout(() => controller.abort(), 20000);
 
